# Chimera

./: .gitignore  DESIGN.md  Dockerfile  FASTAPI_HEALING_README.md  LICENSE  README.md  binary_search_proof_generation_test.py  chimera_cli.css  cli.py  codemcp.toml  complexity_alt.py  complexity_test.py  demo.py  demo_endpoints.py  donor_system.metta  dynamic_monitor.py  example.py  fastapi_healing_server.py  file_based_healer.py  full_analyzer.py  healing_server.py  impl_generator.py  infra_healing_server.py  install.sh  live_api_test.py  main.py  metta_bridge.py  ontology.metta  pg_optimizer_server.py  proof_demo.py  proof_gen_tests.sh  proof_tests.py  proof_verification_helper.py  pyproject.toml  requirements.txt  setup_demo.sh  static_analyzer.py  temporal_analyzer.py  test_file.py  test_file_atoms.py  (+4 more)
commands/: monitor.py  recommend.py
common/: logging_utils.py
cybersecurity_query/: __init__.py  engine.py  entity_resolver.py  intent_classifier.py  metta_query_generator.py  models.py  nl_parser.py  ontology_reader.py  query_builder.py  rating_system.py  reasoning_engine.py  response_formatter.py
executors/: atomspace_manager.py  complexity.py  export_importer.py  exporter.py  full_analyzer.py  metta_generator.py  query_executor.py
experimentation/: complexity_alt.py  demo.py  full_analyzer.py
hybrid_analyzer/: console_ui.py  dynamic_monitor.py  file_processor.py  full_analyzer.py  main.py  manager.py  ontology.metta  static_analyzer.py  test_static_analysis.py
metta/: README.md  cybersecurity_ontology.metta  demo_solutions.metta  donor_generation.metta  (+6 more)
(+55 files in other folders)
